sampler/chain/projects/mockito/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/runners/DefaultInternalRunner.java:34: error: [NullAway] (INDEX= 140) (Covered) @NonNull field DefaultInternalRunner$1.mockitoTestListener not initialized
                    private MockitoTestListener mockitoTestListener;
                                                ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/creation/bytebuddy/InlineByteBuddyMockMaker.java:281: error: [NullAway] (INDEX= 194) (Covered) returning @Nullable expression from method with @NonNull return type
                    return null;
                    ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/AdditionalMatchers.java:250: error: [NullAway] (INDEX= 7) (Covered) returning @Nullable expression from method with @NonNull return type
        return null;
        ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/util/reflection/InstrumentationMemberAccessor.java:145: error: [NullAway] (INDEX= 128) (Covered) passing @Nullable parameter 'null' where @NonNull is required
        assureArguments(constructor, null, null, arguments, constructor.getParameterTypes());
                                           ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/mockito/src/main/java/org/mockito/internal/progress/MockingProgressImpl.java:131: error: [NullAway] (INDEX= 64) (Covered) assigning @Nullable expression to @NonNull field
        stubbingInProgress = null;
                           ^

	(see http://t.uber.com/nullaway )
